fix: emoji overflow

--- a/src/app/components/message-item/message-item.component.scss
+++ b/src/app/components/message-item/message-item.component.scss
@@ -164,7 +164,6 @@
             .reactions-container {
                 display: flex;
                 align-items: stretch;
-                justify-content: center;
                 flex-wrap: wrap;
                 gap: 10px;
 
@@ -440,7 +439,5 @@
         height: 50px !important;
     }
 
-    .reactions-container {
-        flex-wrap: unset !important;
-    }
+
 }
